--- a/loginpage.ui
+++ b/loginpage.ui
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>230</x>
-      <y>20</y>
+      <y>30</y>
       <width>401</width>
       <height>501</height>
      </rect>
@@ -33,7 +33,7 @@
      <property name="geometry">
       <rect>
        <x>70</x>
-       <y>250</y>
+       <y>240</y>
        <width>101</width>
        <height>31</height>
       </rect>
@@ -53,7 +53,7 @@
      <property name="geometry">
       <rect>
        <x>70</x>
-       <y>310</y>
+       <y>300</y>
        <width>111</width>
        <height>31</height>
       </rect>
@@ -73,7 +73,7 @@
      <property name="geometry">
       <rect>
        <x>210</x>
-       <y>250</y>
+       <y>240</y>
        <width>131</width>
        <height>31</height>
       </rect>
@@ -83,7 +83,7 @@
      <property name="geometry">
       <rect>
        <x>210</x>
-       <y>310</y>
+       <y>300</y>
        <width>131</width>
        <height>31</height>
       </rect>
@@ -96,7 +96,7 @@
      <property name="geometry">
       <rect>
        <x>100</x>
-       <y>410</y>
+       <y>390</y>
        <width>201</width>
        <height>41</height>
       </rect>
@@ -124,6 +124,27 @@
      </property>
      <property name="text">
       <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_l_2">
+     <property name="geometry">
+      <rect>
+       <x>100</x>
+       <y>440</y>
+       <width>201</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>ONE DAY</family>
+       <pointsize>10</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Back</string>
      </property>
     </widget>
    </widget>
