--- a/signuppage.ui
+++ b/signuppage.ui
@@ -262,6 +262,12 @@ background-color:red;
      <property name="text">
       <string>Submit</string>
      </property>
+     <property name="shortcut">
+      <string>Return</string>
+     </property>
+     <property name="autoDefault">
+      <bool>false</bool>
+     </property>
     </widget>
     <widget class="QToolButton" name="toolButton_s">
      <property name="geometry">
