--- a/loginpage.ui
+++ b/loginpage.ui
@@ -134,6 +134,9 @@ background-color:red;
      <property name="text">
       <string>Login</string>
      </property>
+     <property name="shortcut">
+      <string>Return</string>
+     </property>
     </widget>
     <widget class="QToolButton" name="toolButton_l">
      <property name="geometry">
