--- a/loginpage.ui
+++ b/loginpage.ui
@@ -13,6 +13,28 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QMessageBox QPushButton{
+	padding:10px;
+	padding-left:40px;
+	padding-right:40px;
+
+}
+QMessageBox{
+	border-radius:12px;
+	background-color:#0b9e7c;
+	font-size:17px;
+	font-weight: bold;
+}
+QMessageBox QLabel{
+color:#d1a732;
+
+}
+QMenubar::item{
+background-color:red;
+
+}</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QFrame" name="frame_l">
     <property name="geometry">
