--- a/menupage.ui
+++ b/menupage.ui
@@ -31,6 +31,26 @@ QLabel{
 }
 #pushButton_2:hover{
 	background-color:rgba(84,153,78,0.4);
+}
+QMessageBox QPushButton{
+	padding:10px;
+	padding-left:40px;
+	padding-right:40px;
+
+}
+QMessageBox{
+	border-radius:12px;
+	background-color:#0b9e7c;
+	font-size:17px;
+	font-weight: bold;
+}
+QMessageBox QLabel{
+color:#d1a732;
+
+}
+QMenubar::item{
+background-color:red;
+
 }</string>
   </property>
   <widget class="QWidget" name="centralwidget">
