--- a/alfalfa_landpage.ui
+++ b/alfalfa_landpage.ui
@@ -28,6 +28,26 @@ QLabel{
 	
 	color:#381e02;
 
+}
+QMessageBox QPushButton{
+	padding:10px;
+	padding-left:40px;
+	padding-right:40px;
+
+}
+QMessageBox{
+	border-radius:12px;
+	background-color:#0b9e7c;
+	font-size:17px;
+	font-weight: bold;
+}
+QMessageBox QLabel{
+color:#d1a732;
+
+}
+QMenubar::item{
+background-color:red;
+
 }</string>
   </property>
   <widget class="QWidget" name="centralwidget">
