--- a/mainpage.ui
+++ b/mainpage.ui
@@ -14,7 +14,26 @@
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true"/>
+   <string notr="true">QMessageBox QPushButton{
+	padding:10px;
+	padding-left:40px;
+	padding-right:40px;
+
+}
+QMessageBox{
+	border-radius:12px;
+	background-color:#0b9e7c;
+	font-size:17px;
+	font-weight: bold;
+}
+QMessageBox QLabel{
+color:#d1a732;
+
+}
+QMenubar::item{
+background-color:red;
+
+}</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="pushButton_a">
